# DiscordBot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.cmd
modules/: dota.py  firebase.py
