[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = ""
authors = ["Pavel Zubarev <pavelzub1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
python-opendota = "^1.0.2"
discord2 = "^2.0.1"
firebase-admin = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
